--- a/Lab5/conclusion.tex
+++ b/Lab5/conclusion.tex
@@ -1,1 +1,9 @@
 \section{Conclusion}
+\subsection{Direct measurement}
+
+Linear resistor behave similarly for both polarities and the meter only displayed an "OL" error message when the chosen range was too small. 
+
+A diode is constructed to only allow current to flow in one direction and, ideally, has infinite resistance in the other direction. We believe that is the reason why the meter displayed an "OL" message for the positive polarity and numerical values for the negative polarity. It remains unclear to us why the numerical values of the same diode differed for different ranges, with one "OL" message within them. The most likely explanations are either human error or the meter influencing the component.
+
+\subsection{Indirect measurement}
+
