--- a/Lab5/experiment.tex
+++ b/Lab5/experiment.tex
@@ -57,7 +57,7 @@ Example calculations for $R_r = \SI{600}{\ohm}$ ($R_2$, positive polarity) are s
 
 \subsubsection{Analog}
 
-The devices used for analog measurements had a 0.5 accuracy class. The voltmeter had a $\frac{\SI{1000}{\ohm}}{\unit{\volt}}$ internal resistance and the ammeter had a $\frac{23}{I_r[\unit{\milli\ampere}]} + \SI{0.004}{\ohm}$ internal resistance.
+For analog measurements we used 0.5 accuracy class devices. The voltmeter had a $\frac{\SI{1000}{\ohm}}{\unit{\volt}}$ internal resistance and the ammeter had a $\frac{23}{I_r[\unit{\milli\ampere}]} + \SI{0.004}{\ohm}$ internal resistance.
 
 The measurements for the CVM circuit are broken into Tables~\ref{tab:analog-CVM1},~\ref{tab:analog-CVM2},~\ref{tab:analog-CVM3},~\ref{tab:analog-CVM4} and the CCM circuit measurements are broken into Tables~\ref{tab:analog-CCM1},~\ref{tab:analog-CCM2},~\ref{tab:analog-CCM3},~\ref{tab:analog-CCM4}. Example calculations for the measurement of $R = \SI{100}{\ohm}$ using the CCM circuit are shown in Equations~\ref{eq:CCM1}~-~\ref{eq:CCMlast}. Since the calculations for the CVM circuit only differ in how the method error is obtained, they are not included in this report.
 
