--- a/Lab5/conclusion.tex
+++ b/Lab5/conclusion.tex
@@ -7,3 +7,4 @@ A diode is constructed to only allow current to flow in one direction and, ideal
 
 \subsection{Indirect measurement}
 
+Digital measurements showed the expected circuit behavior - once the threshold resistance had been reached, the results became unreliable for incorrectly chosen circuits. Analog measurements didn't seem to be influenced by an incorrect choice of circuit and returned correct values regardless of the resistance threshold; we do not yet know why.
