--- a/Lab5/experiment.tex
+++ b/Lab5/experiment.tex
@@ -100,14 +100,14 @@ For indirect measurements, we used two digital meters and resistor standard. Mea
     \begin{tabular}{|l|l|l|l|l|}
     \hline
         $\Delta R$ & $\delta R$ & $R_m$ +- $\Delta R$ & $R_V$ & $R_A$ \\ \hline
-        6952.729034 & 0.5139242916 & ~ & 10 & 0.0001 \\ \hline
-        24667.25518 & 0.4642391882 & ~ & 10 & 0.001 \\ \hline
-        61555.19102 & 0.5042219256 & ~ & 10 & 0.001 \\ \hline
-        238875.1465 & 0.4634346724 & ~ & 10 & 0.01 \\ \hline
-        624794.227 & 0.5052634606 & ~ & 10 & 0.01 \\ \hline
-        1554916.618 & 0.6457972942 & ~ & 10 & 0.01 \\ \hline
-        2851473.195 & 1.054735887 & ~ & 10 & 0.01 \\ \hline
-        4032423.945 & 2.492106709 & ~ & 10 & 0.01 \\ \hline
+        0.6952729034 & 0.5139242916 & 35.732+-0.696 & 10 & 0.0001 \\ \hline
+        2.466725518 & 0.4642391882 & 114.6+-2.5 & 10 & 0.001 \\ \hline
+        6.155519102 & 0.5042219256 & 310.4+-6.2 & 10 & 0.001 \\ \hline
+        23.88751465 & 0.4634346724 & 1107+-24 & 10 & 0.01 \\ \hline
+        62.4794227 & 0.5052634606 & 3157+-63 & 10 & 0.01 \\ \hline
+        155.4916618 & 0.6457972942 & 10042+-160 & 10 & 0.01 \\ \hline
+        285.1473195 & 1.054735887 & 30076+-290 & 10 & 0.01 \\ \hline
+        403.2423945 & 2.492106709 & 100492+-410 & 10 & 0.01 \\ \hline
     \end{tabular}
     \caption{($\Delta R$ -- absolute error, $\delta R$ -- relative error, $R_V$ -- internal voltmeter resistance, $R_A$ -- internal ammeter resistance)}
 \end{table}
@@ -117,15 +117,14 @@ For indirect measurements, we used two digital meters and resistor standard. Mea
     \begin{tabular}{|l|l|l|l|l|}
     \hline
         $\Delta mR$ & $\delta mR$ & c & $R_c$ & $R_c+- \Delta R$ \\ \hline
-        0.0001 & 0.000002798638249 & -0.0001 & 35.73166343 & ~ \\ \hline
-        0.001 & 0.000008732551747 & -0.001 & 114.5140652 & ~ \\ \hline
-        0.001 & 0.000003221921755 & -0.001 & 310.3737695 & ~ \\ \hline
-        0.01 & 0.000009033258406 & -0.01 & 1107.020252 & ~ \\ \hline
-        0.01 & 0.00000316771773 & -0.01 & 3156.846933 & ~ \\ \hline
-        0.01 & 0.0000009958572889 & -0.01 & 10041.59945 & ~ \\ \hline
-        0.01 & 0.0000003324965384 & -0.01 & 30075.50108 & ~ \\ \hline
-        0.01 & 0.00000009951011401 & -0.01 & 100492.2977 & ~  \\ \hline
-    \end{tabular}
+0.0001 & 0.000002798638249 & -0.0001 & 35.73166343 & 35.7+-0.7 \\ \hline
+        0.001 & 0.000008732551747 & -0.001 & 114.5140652 & 114.5+-2.5 \\ \hline
+        0.001 & 0.000003221921755 & -0.001 & 310.3737695 & 310.4+-6.2 \\ \hline
+        0.01 & 0.000009033258406 & -0.01 & 1107.020252 & 1107.0+-23.9 \\ \hline
+        0.01 & 0.00000316771773 & -0.01 & 3156.846933 & 3156.8+-62.5 \\ \hline
+        0.01 & 0.0000009958572889 & -0.01 & 10041.59945 & 10042+-160 \\ \hline
+        0.01 & 0.0000003324965384 & -0.01 & 30075.50108 & 30076+-300 \\ \hline
+        0.01 & 0.00000009951011401 & -0.01 & 100492.2977 & 100492+-410 \\ \hline    \end{tabular}
     \caption{($\Delta mR$ -- – systematic error, $\delta mR$ -- relative error  c - correction factor  $R_c$ -- calculated resistance)}
 
 \end{table}
@@ -213,14 +212,14 @@ Example calculations
     \begin{tabular}{|l|l|l|l|l|}
     \hline
         $\Delta R$ & $\delta R$ & $R_m$ +- $\Delta R$ & $R_V$ & $R_A$ \\ \hline
-        5945.032389 & 0.5093994666 & ~ & 10 & 0.0001 \\ \hline
-        22287.79607 & 0.4683386722 & ~ & 10 & 0.001 \\ \hline
-        59223.71182 & 0.5093843639 & ~ & 10 & 0.001 \\ \hline
-        211993.4675 & 0.4673613531 & ~ & 10 & 0.01 \\ \hline
-        581849.7537 & 0.5082759058 & ~ & 10 & 0.01 \\ \hline
-        1510541.421 & 0.6511660275 & ~ & 10 & 0.01 \\ \hline
-        2782432.642 & 1.058837647 & ~ & 10 & 0.01 \\ \hline
-        3945386.408 & 2.476475179 & ~ & 10 & 0.01 \\ \hline
+  0.5945032389 & 0.5093994666 & 30.3+-0.6 & 10 & 0.0001 \\ \hline
+        2.228779607 & 0.4683386722 & 104.4+-2.3 & 10 & 0.001 \\ \hline
+        5.922371182 & 0.5093843639 & 301+-6 & 10 & 0.001 \\ \hline
+        21.19934675 & 0.4673613531 & 991+-22 & 10 & 0.01 \\ \hline
+        58.18497537 & 0.5082759058 & 2957+-60 & 10 & 0.01 \\ \hline
+        151.0541421 & 0.6511660275 & 9836+-160 & 10 & 0.01 \\ \hline
+        278.2432642 & 1.058837647 & 29461+-280 & 10 & 0.01 \\ \hline
+        394.5386408 & 2.476475179 & 97707+-395 & 10 & 0.01 \\ \hline
     \end{tabular}
     \caption{($\Delta R$ -- absolute error, $\delta R$ -- relative error, $R_V$ -- internal voltmeter resistance, $R_A$ -- internal ammeter resistance)}
 \end{table}
@@ -230,14 +229,14 @@ Example calculations
     \begin{tabular}{|l|l|l|l|l|}
     \hline
         $\Delta mR$ & $\delta mR$ & c & $R_c$ & $R_c+- \Delta R$ \\ \hline
-        -121.9958065 & -3.028396328 & 121.9958065 & 152.2797697 & ~ \\ \hline
-        -1193.950247 & -10.43823682 & 1193.950247 & 1298.332615 & ~ \\ \hline
-        -9402.537 & -30.16763277 & 9402.537 & 9704.213328 & ~ \\ \hline
-        -99154.39223 & -99.07755381 & 99154.39223 & 100145.1678 & ~ \\ \hline
-        -877580.1237 & -295.7402106 & 877580.1237 & 880537.5258 & ~ \\ \hline
-        -9684786.516 & -983.6132565 & 9684786.516 & 9694622.649 & ~ \\ \hline
-        -86827131.52 & -2946.144431 & 86827131.52 & 86856592.96 & ~ \\ \hline
-        -954754016.2 & -9770.651512 & 954754016.2 & 954851722.7 \\ \hline
+              30.28406328 & 0.00000330208861 & -3.028396328 & 27.25556695 & 27.3+-0.6 \\ \hline
+        104.3833682 & 0.000009580253808 & -10.43823682 & 93.94413136 & 94.0+-2.3 \\ \hline
+        301.6773277 & 0.000003314821956 & -30.16763277 & 271.508695 & 272+-6 \\ \hline
+        990.7855382 & 0.00001009320532 & -99.07755381 & 891.6979843 & 892+-22 \\ \hline
+        2957.412106 & 0.000003381357507 & -295.7402106 & 2661.661895 & 2662+-60 \\ \hline
+        9836.142565 & 0.000001016660776 & -983.6132565 & 8852.519309 & 8853+-160 \\ \hline
+        29461.45431 & 0.0000003394267874 & -2946.144431 & 26515.29988 & 26515+-280 \\ \hline
+        97706.52512 & 0.0000001023473308 & -9770.651512 & 87935.86361 & 87936+-400 \\ \hline
     \end{tabular}
     \caption{($\Delta mR$ -- – systematic error, $\delta mR$ -- relative error  c - correction factor  $R_c$ -- calculated resistance)}
 
