--- a/Lab5/experiment.tex
+++ b/Lab5/experiment.tex
@@ -55,6 +55,7 @@ Example calculations for $R_r = \SI{600}{\ohm}$ ($R_2$, positive polarity) are s
 
 \subsection{Indirect resistance measurement}
 
+
 \subsubsection{Analog}
 
 For analog measurements we used 0.5 accuracy class devices. The voltmeter had a $\frac{\SI{1000}{\ohm}}{\unit{\volt}}$ internal resistance and the ammeter had a $\frac{23}{I_r[\unit{\milli\ampere}]} + \SI{0.004}{\ohm}$ internal resistance.
@@ -246,3 +247,193 @@ The measurements for the CVM circuit are broken into Tables~\ref{tab:analog-CVM1
 	R_c = R_m + c =  \SI{98.979592}{\ohm}   + (- \SI{0.310667}{\ohm}) = \SI{98.668925}{\ohm}
 	\label{eq:CCMlast}
 \end{equation}
+
+
+\subsubsection{Digital}
+\subsubsection*{CCM}
+For indirect measurements, we used two digital meters and resistor standard. Measurements were taken for 8 different ranges using CVM and CCM methods 
+
+\begin{table}[!ht]
+	\centering
+	\begin{tabular}{|l|l|l|l|l|l|}
+		\hline
+		Rx & V & $V_r$ & Acc & $\Delta V$ & $\delta V$ \\ \hline
+		30 & 4.892 & 6 & 0.3\%+2 & 0.01668 & 0.3408830744 \\ \hline
+		100 & 4.896 & 6 & 0.3\%+2 & 0.01669 & 0.3408496732 \\ \hline
+		300 & 4.897 & 6 & 0.3\%+2 & 0.01669 & 0.3408413314 \\ \hline
+		1000 & 4.898 & 6 & 0.3\%+2 & 0.01669 & 0.3408329931 \\ \hline
+		3000 & 4.899 & 6 & 0.3\%+2 & 0.01670 & 0.3408246581 \\ \hline
+		10000 & 4.899 & 6 & 0.3\%+2 & 0.01670 & 0.3408246581 \\ \hline
+		30000 & 4.899 & 6 & 0.3\%+2 & 0.01670 & 0.3408246581 \\ \hline
+		100000 & 4.899 & 6 & 0.3\%+2 & 0.01670 & 0.3408246581 \\ \hline
+	\end{tabular}
+	\caption{Indirect resistance measurements for $E \sim \SI{4.8}{\volt}$ ($R_x$ -- true value for resistance, $V$ -- measured voltage,$V_r$ -- range,  $\Delta V$ -- absolute error, $\delta V$ -- relative error)}
+	\label{tab:analog_volt_1}
+\end{table}
+
+\begin{table}[!ht]
+	\centering
+	\begin{tabular}{|l|l|l|l|l|l|}
+		\hline
+		I & Ir & Acc & $\Delta I$ & $\delta I$ & $R_m$ \\ \hline
+		136.909 & 1000 & 0.1+0.01 & 0.236909 & 0.1730412172 & 35.73176343 \\ \hline
+		42.7542 & 100 & 0.05+0.005 & 0.0527542 & 0.1233895149 & 114.5150652 \\ \hline
+		15.7777 & 100 & 0.05+0.005 & 0.0257777 & 0.1633805941 & 310.3747695 \\ \hline
+		4.42445 & 10 & 0.05+0.02 & 0.00542445 & 0.1226016793 & 1107.030252 \\ \hline
+		1.55186 & 10 & 0.05+0.02 & 0.00255186 & 0.1644388025 & 3156.856933 \\ \hline
+		0.48787 & 10 & 0.05+0.02 & 0.00148787 & 0.3049726362 & 10041.60945 \\ \hline
+		0.16289 & 10 & 0.05+0.02 & 0.00116289 & 0.7139112284 & 30075.51108 \\ \hline
+		0.04875 & 10 & 0.05+0.02 & 0.00104875 & 2.151282051 & 100492.3077 \\ \hline
+	\end{tabular}
+	\caption{($I$ -- circuit current, $Ir$ -- range, $\Delta I$ -- absolute error, $\delta I$ -- relative error, $R_m$ -- measured value)}
+\end{table}
+
+\begin{table}[!ht]
+	\centering
+	\begin{tabular}{|l|l|l|l|l|}
+		\hline
+		$\Delta R$ & $\delta R$ & $R_m$ +- $\Delta R$ & $R_V$ & $R_A$ \\ \hline
+		0.6952729034 & 0.5139242916 & 35.732+-0.696 & 10 & 0.0001 \\ \hline
+		2.466725518 & 0.4642391882 & 114.6+-2.5 & 10 & 0.001 \\ \hline
+		6.155519102 & 0.5042219256 & 310.4+-6.2 & 10 & 0.001 \\ \hline
+		23.88751465 & 0.4634346724 & 1107+-24 & 10 & 0.01 \\ \hline
+		62.4794227 & 0.5052634606 & 3157+-63 & 10 & 0.01 \\ \hline
+		155.4916618 & 0.6457972942 & 10042+-160 & 10 & 0.01 \\ \hline
+		285.1473195 & 1.054735887 & 30076+-290 & 10 & 0.01 \\ \hline
+		403.2423945 & 2.492106709 & 100492+-410 & 10 & 0.01 \\ \hline
+	\end{tabular}
+	\caption{($\Delta R$ -- absolute error, $\delta R$ -- relative error, $R_V$ -- internal voltmeter resistance, $R_A$ -- internal ammeter resistance)}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\begin{tabular}{|l|l|l|l|l|}
+		\hline
+		$\Delta mR$ & $\delta mR$ & c & $R_c$ & $R_c+- \Delta R$ \\ \hline
+		0.0001 & 0.000002798638249 & -0.0001 & 35.73166343 & 35.7+-0.7 \\ \hline
+		0.001 & 0.000008732551747 & -0.001 & 114.5140652 & 114.5+-2.5 \\ \hline
+		0.001 & 0.000003221921755 & -0.001 & 310.3737695 & 310.4+-6.2 \\ \hline
+		0.01 & 0.000009033258406 & -0.01 & 1107.020252 & 1107.0+-23.9 \\ \hline
+		0.01 & 0.00000316771773 & -0.01 & 3156.846933 & 3156.8+-62.5 \\ \hline
+		0.01 & 0.0000009958572889 & -0.01 & 10041.59945 & 10042+-160 \\ \hline
+		0.01 & 0.0000003324965384 & -0.01 & 30075.50108 & 30076+-300 \\ \hline
+		0.01 & 0.00000009951011401 & -0.01 & 100492.2977 & 100492+-410 \\ \hline    \end{tabular}
+	\caption{($\Delta mR$ -- – systematic error, $\delta mR$ -- relative error  c - correction factor  $R_c$ -- calculated resistance)}
+	
+\end{table}
+
+Example calculations 
+\begin{equation}
+	V = \frac{\alpha\cdot V_{r}}{\alpha_{max}} = \frac{39.5\cdot \SI{7.5}{\volt}}{75} = \SI{3.95}{\volt}
+	\label{eq:digital_indirect}
+\end{equation}
+
+\begin{equation}
+	\Delta V = \frac{0.3}{100\unit{\percent}} \cdot V + 2 \cdot 0.001 = \frac{0.3}{100\unit{\percent}} \cdot 4.896 + 2 \cdot 0.001 = \SI{0.01669}{\volt}
+	\label{eq:digital_indirect}
+\end{equation}
+
+\begin{equation}
+	\delta V = \frac{\Delta V}{V}\cdot 100\unit{\percent} = \frac{0.01669}{4.892}\cdot 100\unit{\percent} \approx 0.3408830744\unit{\percent}
+	\label{eq:digital_indirect}
+\end{equation}
+
+\begin{equation}
+	R_m = \frac{U_r}{ I_r} = \frac{\SI{4.896}{\volt}} {\SI{42.7542}{\milli\ampere}} = \SI{114.5150652}{\ohm}
+	\label{eq:digital_indirect}
+\end{equation}
+
+\begin{equation}
+	\delta_m R = \delta I + \delta V = -\SI{0.3408496732}{\percent} + \SI{0.1233895149}{\percent} = -\SI{0.4642391882}{\percent}
+	\label{eq:digital_indirect}
+\end{equation}
+
+\begin{equation}
+	\delta_m R = -\frac{R_A}{R_m - R_A} = -\frac{\SI{0.001}{\ohm}}{\SI{114.5150652}{\ohm} + \SI{0.001}{\ohm}} \approx 0.000008732551747
+	\label{eq:digital_indirect}
+\end{equation}
+
+\begin{equation}
+	c = -\Delta_m R = -(\SI{0.001}{\ohm}) = -\SI{0.001}{\ohm}
+	\label{eq:digital_indirect}
+\end{equation}
+
+\begin{equation}
+	R_c = R_m + c = \SI{114.5150652}{\ohm} + \SI{0.001}{\ohm} = \SI{114.5140652}{\ohm}
+	\label{eq:analog_V_c}
+\end{equation}
+
+\subsubsection*{CVM}
+
+\begin{table}[!ht]
+	\centering
+	\begin{tabular}{|l|l|l|l|l|l|}
+		\hline
+		Rx & V & $V_r$ & Acc & $\Delta V$ & $\delta V$ \\ \hline
+		30 & 4.813 & 6 & 0.3\%+2 & 0.01668 & 0.346478288 \\ \hline
+		100 & 4.814 & 6 & 0.3\%+2 & 0.01669 & 0.3466555879 \\ \hline
+		300 & 4.814 & 6 & 0.3\%+2 & 0.01669 & 0.3467179061 \\ \hline
+		1000 & 4.814 & 6 & 0.3\%+2 & 0.01669 & 0.3467802243 \\ \hline
+		3000 & 4.814 & 6 & 0.3\%+2 & 0.01670 & 0.3468425426 \\ \hline
+		10000 & 4.814 & 6 & 0.3\%+2 & 0.01670 & 0.3468425426 \\ \hline
+		30000 & 4.814 & 6 & 0.3\%+2 & 0.01670 & 0.3468425426 \\ \hline
+		100000 & 4.814 & 6 & 0.3\%+2 & 0.01670 & 0.3468425426 \\ \hline
+	\end{tabular}
+	\caption{Indirect resistance measurements for $E \sim \SI{4.8}{\volt}$ ($R_x$ -- true value for resistance, $V$ -- measured voltage,$V_r$ -- range,  $\Delta V$ -- absolute error, $\delta V$ -- relative error)}
+	\label{tab:analog_volt_1}
+\end{table}
+
+\begin{table}[!ht]
+	\centering
+	\begin{tabular}{|l|l|l|l|l|l|}
+		\hline
+		I & Ir & Acc & $\Delta I$ & $\delta I$ & $R_m$ \\ \hline
+		158.929 & 1000 & 0.1+0.01 & 0.258929 & 0.1629211786 & 30.28396328 \\ \hline
+		46.1189 & 100 & 0.05+0.005 & 0.0561189 & 0.1216830844 & 104.3823682 \\ \hline
+		15.9575 & 100 & 0.05+0.005 & 0.0259575 & 0.1626664578 & 301.6763277 \\ \hline
+		4.85882 & 10 & 0.05+0.02 & 0.00585882 & 0.1205811288 & 990.7755381 \\ \hline
+		1.62778 & 10 & 0.05+0.02 & 0.00262778 & 0.1614333632 & 2957.402106 \\ \hline
+		0.48942 & 10 & 0.05+0.02 & 0.00148942 & 0.3043234849 & 9836.132565 \\ \hline
+		0.1634 & 10 & 0.05+0.02 & 0.0011634 & 0.711995104 & 29461.44431 \\ \hline
+		0.04927 & 10 & 0.05+0.02 & 0.00104927 & 2.129632636 & 97706.51512 \\ \hline
+	\end{tabular}
+	\caption{($I$ -- circuit current, $Ir$ -- range, $\Delta I$ -- absolute error, $\delta I$ -- relative error, $R_m$ -- measured value)}
+\end{table}
+
+\begin{table}[!ht]
+	\centering
+	\begin{tabular}{|l|l|l|l|l|}
+		\hline
+		$\Delta R$ & $\delta R$ & $R_m$ +- $\Delta R$ & $R_V$ & $R_A$ \\ \hline
+		0.5945032389 & 0.5093994666 & 30.3+-0.6 & 10 & 0.0001 \\ \hline
+		2.228779607 & 0.4683386722 & 104.4+-2.3 & 10 & 0.001 \\ \hline
+		5.922371182 & 0.5093843639 & 301+-6 & 10 & 0.001 \\ \hline
+		21.19934675 & 0.4673613531 & 991+-22 & 10 & 0.01 \\ \hline
+		58.18497537 & 0.5082759058 & 2957+-60 & 10 & 0.01 \\ \hline
+		151.0541421 & 0.6511660275 & 9836+-160 & 10 & 0.01 \\ \hline
+		278.2432642 & 1.058837647 & 29461+-280 & 10 & 0.01 \\ \hline
+		394.5386408 & 2.476475179 & 97707+-395 & 10 & 0.01 \\ \hline
+	\end{tabular}
+	\caption{($\Delta R$ -- absolute error, $\delta R$ -- relative error, $R_V$ -- internal voltmeter resistance, $R_A$ -- internal ammeter resistance)}
+\end{table}
+
+\begin{table}[!ht]
+	\centering
+	\begin{tabular}{|l|l|l|l|l|}
+		\hline
+		$\Delta mR$ & $\delta mR$ & c & $R_c$ & $R_c+- \Delta R$ \\ \hline
+		30.28406328 & 0.00000330208861 & -3.028396328 & 27.25556695 & 27.3+-0.6 \\ \hline
+		104.3833682 & 0.000009580253808 & -10.43823682 & 93.94413136 & 94.0+-2.3 \\ \hline
+		301.6773277 & 0.000003314821956 & -30.16763277 & 271.508695 & 272+-6 \\ \hline
+		990.7855382 & 0.00001009320532 & -99.07755381 & 891.6979843 & 892+-22 \\ \hline
+		2957.412106 & 0.000003381357507 & -295.7402106 & 2661.661895 & 2662+-60 \\ \hline
+		9836.142565 & 0.000001016660776 & -983.6132565 & 8852.519309 & 8853+-160 \\ \hline
+		29461.45431 & 0.0000003394267874 & -2946.144431 & 26515.29988 & 26515+-280 \\ \hline
+		97706.52512 & 0.0000001023473308 & -9770.651512 & 87935.86361 & 87936+-400 \\ \hline
+	\end{tabular}
+	\caption{($\Delta mR$ -- – systematic error, $\delta mR$ -- relative error  c - correction factor  $R_c$ -- calculated resistance)}
+	
+\end{table}
+
+
+
